--- a/crates/hoodmem/Cargo.toml
+++ b/crates/hoodmem/Cargo.toml
@@ -13,4 +13,5 @@ windows = { version = "0.51.1", features = [
     "Win32_System_Diagnostics_Debug",
     "Win32_System_SystemInformation",
     "Win32_System_Memory",
+    "Win32_UI_WindowsAndMessaging",
 ] }
