--- a/crates/hoodmem/Cargo.toml
+++ b/crates/hoodmem/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+rayon = "1.7.0"
 windows = { version = "0.51.1", features = [
     "Win32_System_Threading",
     "Win32_Foundation",
