--- a/crates/hoodmem/Cargo.toml
+++ b/crates/hoodmem/Cargo.toml
@@ -8,6 +8,12 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 rayon = "1.7.0"
+
+[target.'cfg(unix)'.dependencies]
+nix = { version = "0.27.1", features = ["process", "uio"] }
+proc-maps = "0.3.2"
+
+[target.'cfg(windows)'.dependencies]
 windows = { version = "0.51.1", features = [
     "Win32_System_Threading",
     "Win32_Foundation",
