--- a/crates/memninja-tui/Cargo.toml
+++ b/crates/memninja-tui/Cargo.toml
@@ -12,3 +12,4 @@ crossbeam = "0.8.4"
 crossbeam-channel = "0.5.12"
 ratatui = "0.29.0"
 crossterm = "0.28.1"
+strum = { version = "0.27.1", features = ["derive"] }
